--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -3,41 +3,91 @@ title: Using Discord as a CMS
 publishedAt: 2021-04-06T18:46:00Z
 ---
 
-During the final weeks of school back in 2019, me and a few other students were sick and tired of the so called food served in the cafeteria. We decided to photograph the food every day and display the images on a website. Since fancy solutions such as Amazon S3 and Google Cloud Storage exceeded the budget, I had to come up with a creative solution for storing and browsing hundreds of photos.
+During the final weeks of school back in 2019, I and a few other students were sick and tired of the so-called food served in the cafeteria.
+We decided to photograph the food every day and display the images on a website. Since fancy solutions such as Amazon S3 and Google Cloud Storage exceeded the budget,
+I had to come up with a creative solution for storing and browsing hundreds of photos.
 
-Being a gamer, I was familiar with Discord. I was *also* familiar with the wonderful Discord API – as well as the JavaScript library used to build chat bots. As far as I know, you can post as many messages in a Discord channel as you want – as long as the attachments are smaller than 8 megabytes (because I’m too cheap for Nitro). On top of that, the API used to interact with Discord is completely free and with generous limits!
+Being a gamer, I was a seasoned [Discord](https://discord.com/) user. I was also familiar with the wonderful [Discord API](https://discord.com/developers/docs/intro)
+as well as [the inofficial JavaScript library used to interact with it](https://discord.js.org/#/).
+As far as I know, you can post as many messages in a Discord channel as you want –
+as long as the attachments are smaller than 8 megabytes (because I'm too cheap for [Nitro](https://discord.com/nitro)).
+On top of that, the API used to interact with Discord is free and with [generous rate limits](https://discord.com/developers/docs/topics/rate-limits)!
 
-Scrolling through a chat with potentially hundreds of messages wasn’t going to cut it for me, though. To improve user experience, a website had to be built. To be recognized, I had to make the first ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan, södermalmsskolan.com seemed fitting. And cheap – only two Euros for the first year at GoDaddy!
+Scrolling through a chat with potentially hundreds of messages wasn't going to cut it for me, though. To improve user experience, a website had to be built.
+To be recognized on *the interwebs*, I had to make the first-ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan,
+[södermalmsskolan.com](https://xn--sdermalmsskolan-8sb.com/) seemed fitting. And cheap – I paid €3 for the first year at GoDaddy!
 
-The website was spartan at first, built with Express.js and deployed on my very own Kubernetes cluster. A website that used to serve the menu provided an RSS feed that södermalmsskolan.com parsed and presented. However, I knew it wouldn’t be *that* easy.
+## The first iteration
 
-Me and my friends weren’t happy with the website and the photos. We wanted to spread the word about what we thought was important at the school, and we wanted to make it look professional. We wanted a blog.
+The website was spartan at first, built with [Express.js](https://expressjs.com/) and [Handlebars](https://handlebarsjs.com/).
+My very own Kubernetes cluster hosted it.
+A website that used to serve the menu provided an RSS feed that södermalmsskolan.com parsed and presented. However, I knew it wouldn't be that easy.
 
-Initially, the blog consisted of Markdown files in a GitHub repository. My friends were unsatisfied with the user unfriendly way of making big and small changes to various articles. There had to be a better way to do it.
+I and my friends weren't happy with settling on the website and the photos. We wanted to spread the word about what we believed mattered in school, and we wanted to make it look professional. We wanted a blog.
 
-Somehow, I came across Ghost. It is a wonderful CMS (just like Discord), and very easy to set up. I deployed it on my Kubernetes cluster and gave it its very own subdomain. My friends were delighted and I was proud. Hoping to make up for the fatal domain expenses, I also installed Google AdSense.
+Initially, the blog consisted of a bunch of Markdown files in a GitHub repository.
+My friends were unsatisfied with the user-unfriendly way of making big and small changes to various articles. There had to be a better way to do it.
 
-While the website worked flawlessly, the Handlebars engine was starting to be more of a pain than I had anticipated. We wanted to be able to display the blog posts on the front page of södermalmsskolan.com, but a server-side rendered template engine like Handelebars was too slow for the job. Moreover, I found myself repeating a lot of HTML and wanted reusable components.
+Somehow, I came across [Ghost](https://ghost.org/). It is a wonderful CMS (just like Discord) and very easy to set up.
+I deployed it on my Kubernetes cluster and gave it its very own subdomain.
+My friends were delighted and I was proud. Hoping to make up for the fatal domain expenses, I also installed Google AdSense.
 
-Then came Next.js. Before Next.js, I had rejected React since I thought that it was only for single page applications – react-router was too exotic. Next.js, on the other hand, was easy to get started with thanks to the file-based routing that I was familiar with. After a few nights of coding, the React application was deployed on the cluster, complete with the blog posts!
+## Leaving Handlebars
+
+While the website worked flawlessly, the Handlebars engine began to be more of a pain than I had anticipated.
+We wanted to display the blog posts on the front page of södermalmsskolan.com,
+but a server-side rendered template engine like Handlebars was too slow for the job. Moreover,
+I found myself repeating a lot of HTML and wanted reusable components.
+
+Then came [Next.js](https://nextjs.org/). I had rejected React since I thought it was only for single-page applications;
+react-router was too exotic. Next.js, on the other hand, was easy to get started with thanks to the file-based routing that I was familiar with.
+After a few nights of coding, the React application was deployed on the cluster, complete with the blog posts!
 
 A few months later, we felt the urge to add more features:
-* A page displaying various Quizlet study sets.
+
+* A page displaying various [Quizlet](https://quizlet.com/) study sets.
 * A schedule.
 * A page listing the letters published by the teachers.
 
 ## The Quizlet Problem
-Since we often need to learn strange new words, many of us use Quizlet. To share the “study sets” with the students, I created a Discord channel and a page on the website. Everything went well until I had to display the names of the linked study sets – Quizlet had deprecated their API! Left with no other options, I had to scrape their site.
 
-## The Schedule Problem
-A schedule was added to help the users keep track of time.
+Since we often need to learn strange new words, many of us use Quizlet. To share the "study sets" with the students,
+I created a Discord channel and a page on the website. Everything went well. Then, I wanted to display the names of the linked study sets.
+Use an API, they said. It will work, they said. The API is deprecated, Quizlet said. Left with no other options, I had to scrape their site.
 
 ## The PDF Problem
-Later, we also implemented a kind of news service. When users logged in with Firebase, they were able to view PDF files published by the teachers, complete with handy previews – directly on the website. Naturally, those PDFs were stored on Discord.
+
+Later, we also implemented a kind of news service. When users logged in with Firebase, they could view PDF files published by the teachers,
+complete with handy previews – directly on the website. Naturally, those PDFs were stored on Discord.
 
 ## Unexpected 404s in the middle of summer
-Well over a year after launching the website, the menu just stopped working. A few hours of detective work revealed that the underlying service used to fetch the information had been discarded by my school. Unfortunately, the new service didn’t provide any way of programmatically getting hold of the menu. I had to scrape this, too.
 
-During the summer, I had migrated the website from my Kubernetes cluster to Vercel. Since Vercel explicitly prohibits any form of web scraping, I decided to adhere to the terms of service for once and build a separate scraping API in Rust.
+Well over a year after launching the website, the menu just stopped working.
+A few hours of detective work revealed that the underlying service used to fetch the information
+had been discarded by my school in favor of [a much worse site](https://www.mashie.com/en).
+Unfortunately, the new service didn't provide any way of programmatically getting hold of the menu. I had to scrape this one, too.
 
-“Why Rust?” you might be asking. I have a lot more experience with JavaScript, and could have built the same service in a fraction of the time. But in order to learn, I did it with Rust. And deployed it on my own Kubernetes cluster.                                                                                                                    
+```
+Never Fair Use
+* Proxies and VPNs
+* Media hosting for hot-linking
+* Scrapers
+* Crypto Mining
+* CPU-intensive APIs (e.g.: Machine Learning)
+* Load Testing
+```
+
+During the summer, I had migrated the website from my Kubernetes cluster to Vercel. Since Vercel explicitly prohibits any form of scraping,
+I decided to adhere to the terms of service for once and build a separate scraping API in Rust. Mainly since I like the people over
+at Vercel and appreciate [their contribution to open source](https://vercel.com/oss), not to mention the fact that they let me host the project for free.
+
+My school switching to the "new" service had an unexpected impact on the website. The new service was less user-friendly, to say the least, which resulted in my website gaining popularity.
+To give a taste of how poor the user experience was: The URL used to view the menu was `https://sodexo.mashie.com/public/app/Mariaskolan/25fee70c?country=se`.
+If you missed any query parameters, you were out of luck. By the way, it is much less catchy than södermalmsskolan.com.
+
+> Why Rust?
+> (You, probably.)
+
+You might be wondering why I chose Rust. Since I have a lot more experience with JavaScript,
+I could have built the same service in a fraction of the time. But to learn, I did it with Rust.
+And deployed it on my Kubernetes cluster. Like everyone else using Rust, I fell in love after the first few lines of code.
