--- a/_posts/proof-of-concept.mdx
+++ b/_posts/proof-of-concept.mdx
@@ -1,6 +1,7 @@
 ---
 title: Proof of Concept
 publishedAt: 1969-07-20T00:00:00Z
+excerpt: This is not a blog post. Don't read it.
 ---
 
 ## This is interesting…
