--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -1,6 +1,7 @@
 ---
 title: Using Discord as a CMS
 publishedAt: 2021-04-06T18:46:00Z
+excerpt: How I used Discord as a fully-fledged content management system.
 ---
 
 During the final weeks of school back in 2019, I and a few other students were sick and tired of the so-called food served in the cafeteria.
@@ -16,6 +17,8 @@ On top of that, the API used to interact with Discord is free and with [generous
 Scrolling through a chat with potentially hundreds of messages wasn't going to cut it for me, though. To improve user experience, a website had to be built.
 To be recognized on *the interwebs*, I had to make the first-ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan,
 [södermalmsskolan.com](https://xn--sdermalmsskolan-8sb.com/) seemed fitting. And cheap – I paid €3 for the first year at GoDaddy!
+
+![The first ever photograph.](https://cdn.discordapp.com/attachments/575993879837409290/576074256723476491/IMG_20190507_121005.jpg)
 
 ## The first iteration
 
