--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -94,3 +94,8 @@ If you missed any query parameters, you were out of luck. By the way, it is much
 You might be wondering why I chose Rust. Since I have a lot more experience with JavaScript,
 I could have built the same service in a fraction of the time. But to learn, I did it with Rust.
 And deployed it on my Kubernetes cluster. Like everyone else using Rust, I fell in love after the first few lines of code.
+
+## Recap
+
+All in all, Discord was the perfect CMS for my project. With unparalleled reliability, an intuitive UI as well as good enough performance (not to mention the non-existent price tag),
+I couldn't have been more satisfied with it. The not so well-documented GitHub repository is [here](https://github.com/ThePicoNerd/sodermalmsskolan.com).
