--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -15,7 +15,7 @@ as long as the attachments are smaller than 8 megabytes (because I'm too cheap f
 On top of that, the API used to interact with Discord is free and with [generous rate limits](https://discord.com/developers/docs/topics/rate-limits)!
 
 Scrolling through a chat with potentially hundreds of messages wasn't going to cut it for me, though. To improve user experience, a website had to be built.
-To be recognized on *the interwebs*, I had to make the first-ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan,
+To be recognized on _the interwebs_, I had to make the first-ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan,
 [södermalmsskolan.com](https://xn--sdermalmsskolan-8sb.com/) seemed fitting. And cheap – I paid €3 for the first year at GoDaddy!
 
 ![The first ever photograph.](https://cdn.discordapp.com/attachments/575993879837409290/576074256723476491/IMG_20190507_121005.jpg)
@@ -48,9 +48,9 @@ After a few nights of coding, the React application was deployed on the cluster,
 
 A few months later, we felt the urge to add more features:
 
-* A page displaying various [Quizlet](https://quizlet.com/) study sets.
-* A schedule.
-* A page listing the letters published by the teachers.
+- A page displaying various [Quizlet](https://quizlet.com/) study sets.
+- A schedule.
+- A page listing the letters published by the teachers.
 
 ## The Quizlet Problem
 
