--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -20,7 +20,7 @@ To be recognized on _the interwebs_, I had to make the first-ever purchase for t
 
 ![The first ever photograph.](https://cdn.discordapp.com/attachments/575993879837409290/576074256723476491/IMG_20190507_121005.jpg)
 
-## The first iteration
+## The First Iteration
 
 The website was spartan at first, built with [Express.js](https://expressjs.com/) and [Handlebars](https://handlebarsjs.com/).
 My very own Kubernetes cluster hosted it.
@@ -63,26 +63,16 @@ Use an API, they said. It will work, they said. The API is deprecated, Quizlet s
 Later, we also implemented a kind of news service. When users logged in with Firebase, they could view PDF files published by the teachers,
 complete with handy previews – directly on the website. Naturally, those PDFs were stored on Discord.
 
-## Unexpected 404s in the middle of summer
+## Unexpected 404s in the Middle of Summer
 
 Well over a year after launching the website, the menu just stopped working.
 A few hours of detective work revealed that the underlying service used to fetch the information
 had been discarded by my school in favor of [a much worse site](https://www.mashie.com/en).
 Unfortunately, the new service didn't provide any way of programmatically getting hold of the menu. I had to scrape this one, too.
 
-```
-Never Fair Use
-* Proxies and VPNs
-* Media hosting for hot-linking
-* Scrapers
-* Crypto Mining
-* CPU-intensive APIs (e.g.: Machine Learning)
-* Load Testing
-```
-
 During the summer, I had migrated the website from my Kubernetes cluster to Vercel. Since Vercel explicitly prohibits any form of scraping,
 I decided to adhere to the terms of service for once and build a separate scraping API in Rust. Mainly since I like the people over
-at Vercel and appreciate [their contribution to open source](https://vercel.com/oss), not to mention the fact that they let me host the project for free.
+at Vercel and appreciate [their contributions to open source](https://vercel.com/oss), not to mention the fact that they host the project for free.
 
 My school switching to the "new" service had an unexpected impact on the website. The new service was less user-friendly, to say the least, which resulted in my website gaining popularity.
 To give a taste of how poor the user experience was: The URL used to view the menu was `https://sodexo.mashie.com/public/app/Mariaskolan/25fee70c?country=se`.
