--- a/_posts/using-discord-as-a-cms.mdx
+++ b/_posts/using-discord-as-a-cms.mdx
@@ -9,10 +9,10 @@ We decided to photograph the food every day and display the images on a website.
 I had to come up with a creative solution for storing and browsing hundreds of photos.
 
 Being a gamer, I was a seasoned [Discord](https://discord.com/) user. I was also familiar with the wonderful [Discord API](https://discord.com/developers/docs/intro)
-as well as [the inofficial JavaScript library used to interact with it](https://discord.js.org/#/).
+as well as [the inofficial JavaScript library](https://discord.js.org/#/) used to interact with it.
 As far as I know, you can post as many messages in a Discord channel as you want –
 as long as the attachments are smaller than 8 megabytes (because I'm too cheap for [Nitro](https://discord.com/nitro)).
-On top of that, the API used to interact with Discord is free and with [generous rate limits](https://discord.com/developers/docs/topics/rate-limits)!
+On top of that, the API used to interact with Discord is free and comes with [generous rate limits](https://discord.com/developers/docs/topics/rate-limits)!
 
 Scrolling through a chat with potentially hundreds of messages wasn't going to cut it for me, though. To improve user experience, a website had to be built.
 To be recognized on _the interwebs_, I had to make the first-ever purchase for this project: a domain name. Given that the school is called Södermalmsskolan,
@@ -77,9 +77,6 @@ at Vercel and appreciate [their contributions to open source](https://vercel.com
 My school switching to the "new" service had an unexpected impact on the website. The new service was less user-friendly, to say the least, which resulted in my website gaining popularity.
 To give a taste of how poor the user experience was: The URL used to view the menu was `https://sodexo.mashie.com/public/app/Mariaskolan/25fee70c?country=se`.
 If you missed any query parameters, you were out of luck. By the way, it is much less catchy than södermalmsskolan.com.
-
-> Why Rust?  
-> (You, probably.)
 
 You might be wondering why I chose Rust. Since I have a lot more experience with JavaScript,
 I could have built the same service in a fraction of the time. But to learn, I did it with Rust.
