--- a/_posts/spying-on-my-classmates-with-an-esp8266.mdx
+++ b/_posts/spying-on-my-classmates-with-an-esp8266.mdx
@@ -30,7 +30,7 @@ a rough idea of how many people were nearby. I quickly ran into compilation comp
 cross-compile Rust for the `ARMv6` architecture (and dynamically linking some Bluetooth library) and
 decided to give up on Rust and Bluetooth on the Pi.
 
-While I was trying to make my Rust program talk with the Bluetooth adapter on my Raspberry Pi, I
+As I tried to make my Rust program talk with the Bluetooth adapter on my Raspberry Pi, I
 laid out deployment plans. I would try to hide the little computer somewhere in the cafeteria and
 hope for the best. Eventually, I realized that the Pi (albeit not much larger than a flash drive) was
 too big, at least with the wall adaptor and power cable included in the calculation. The device had
